
=======================================================
            WanT code:  Log of Changes 
=======================================================

12 Jun 2005      Iotk COLUMNS flag used instead of FMT in write calls. (AF)

10 Jun 2005      Bug fixed in hamiltonian_calc.f90 (RHAM writing). (AF)

07 Jun 2005      Correlation corrections in transport calculations added in the
                 conductor.x program. transmittance.f90 routine added to Transport. 
                 Input format changes, README.input updated. (AF)

06 Jun 2005      Bug fixed in blc2wan.f90 ; checks performed. Clean up in the transport
                 code in order to easily introduce the correlation stuff. (AF)

02 Jun 2005      blc2wan.f90 written and properly compiling. (AF)

01 Jun 2005      routine hamiltonian moved to hamiltonian_calc, module hamiltonian_module
                 added in order to manage low-level operations. Program bands.x updated 
                 and modified. (AF)

31 May 2005      hamiltonian.x splitted into a routine (hamiltonian.f90) called by
                 wannier.x and a further band interpolation post-processing (bands.x);
                 tests and documentation updated. (AF)

20 May 2005      Driving functional term for conditioned minimization added in the
                 domega_aux routine. Related changes in input routined added. (AF)

12 May 2005      Fixed a bug in the sign of the Q_ij(b) term; fixed a long standing
                 bug in the internal ordering of atoms and pseudopotentials. (AF)

11 May 2005      Atomic projections fully implemented and tested; Test5 changed and 
                 updated. Set_overlap_map and add_us_overlap renamed to overlap_setmap 
                 and overlap_augment respectively. FIxed a bug in overlap_augment. (AF)

10 May 2005      Merge between the main branch and the one with sp3 orbitals implemented
                 (together with a new impl of spherical harmonics) completed; bugs