@@ -193,8 +193,8 @@ if [ "$BULK" = ".TRUE." ] ; then
    if [ ! -e CRASH ] ; then 
       echo "done" 
       #
-      mv dos.out $TEST_HOME/dos_bulk_AuUS.out
-      mv cond.out $TEST_HOME/cond_bulk_AuUS.out
+      mv dos.dat $TEST_HOME/dos_bulk_AuUS.dat
+      mv cond.dat $TEST_HOME/cond_bulk_AuUS.dat
    else
       echo "found some problems in BULK calculation, stopping" ; cat CRASH ; exit 1
    fi
@@ -219,8 +219,8 @@ if [ "$CONDUCTOR" = ".TRUE." ] ; then
    if [ ! -e CRASH ] ; then 
       echo "done" 
       #
-      mv dos.out $TEST_HOME/dos_AuUS.out
-      mv cond.out $TEST_HOME/cond_AuUS.out
+      mv dos.dat $TEST_HOME/dos_AuUS.dat
+      mv cond.dat $TEST_HOME/cond_AuUS.dat
    else
       echo "found some problems in CONDUCTOR calculation, stopping" ; cat CRASH ; exit 1
    fi
