@@ -190,8 +190,8 @@ if [ "$BULK" = ".TRUE." ] ; then
    if [ ! -e CRASH ] ; then 
       echo "done" 
       #
-      mv dos.out $TEST_HOME/dos_bulk_CoUS.out
-      mv cond.out $TEST_HOME/cond_bulk_CoUS.out
+      mv dos.dat $TEST_HOME/dos_bulk_CoUS.dat
+      mv cond.dat $TEST_HOME/cond_bulk_CoUS.dat
    else
       echo "found some problems in BULK calculation, stopping" ; cat CRASH ; exit 1
    fi
